[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_stats"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GameOverLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "FINAL SCORE: 0"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Wave Reached: 1"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Max Combo: x0"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "RESTART"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"
